--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
   },
   "author": "",
   "license": "ISC",
-  "dependencies": {
+  "devDependencies": {
     "typescript": "^2.4.2"
+  },
+  "dependencies": {
+    "@angular/core": "^4.3.5"
   }
 }
